# Communication-and-Round-Efficient-Join-and-Group-by-Aggregation

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_bool  test_bool.cpp
BoolSh2/: boolSh2.cpp  boolSh2.h
Comm_bool/: comm_bool.cpp  comm_bool.h
LowMC/: lowmc.cpp  lowmc.h
Sh2/: Sh2.cpp  Sh2.h
Table/: Table.h  Table_1.h  Table_2.h  Table_3.h
